--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,17 @@
-version: "3.8"
-
+version: "3"
 services:
-  app:
+  student_service:
     build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - MONGO_URI=mongodb://mongo:27017
-      - MONGO_DB=students_db
-      - MONGO_COLLECTION=students
+    restart: unless-stopped
     depends_on:
       - mongo
+    environment:
+      MONGO_URI: mongodb://mongo:27017
+    ports:
+      - "8080:8080"
 
   mongo:
-    image: mongo:latest
+    image: mongo:4
+    restart: unless-stopped
     ports:
       - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
-
-volumes:
-  mongo-data:
