--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build docker
         run: |
-          docker build . -t $REPO_NAME/$IMAGE_NAME
+          docker compose build
       - name: run docker
         run: |
-          docker run -d -p 8080:8080 $REPO_NAME/$IMAGE_NAME:latest && \
+          docker compose -d up && \
             docker ps && sleep 5
 
       - name: "Check files existence"
