--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           docker compose build
       - name: run docker
         run: |
-          docker compose -d up && \
+          docker compose up -d && \
             docker ps && sleep 5
 
       - name: "Check files existence"
