--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3"
 services:
   student_service:
     build: .
+    image: jvs99/student_service:latest
     restart: unless-stopped
     depends_on:
       - mongo
